--- a/Curriculo.html
+++ b/Curriculo.html
@@ -73,7 +73,7 @@
                         <li>Administrador de Bancos de Dados</li>
                         <li>Power BI e Python</li>
                         <li>LGPD</li>
-                        <li>Dev Low Code</li>
+                        <li>Transformação Digital</li>
                     </ul>
                 </div>
             </div>
