--- a/Curriculo.html
+++ b/Curriculo.html
@@ -29,7 +29,7 @@
             <div class="section">
                 <h2 onclick="toggleSection(this)">Síntese <i class="fas fa-chevron-down"></i></h2>
                 <div class="section-content">
-                    <p>Atualmente cursando Análise e Desenvolvimento de Sistemas com foco em infraestrutura de TI, suporte técnico e bancos de dados. Experiência em suporte técnico, com habilidades para propor soluções e melhorias nos processos para atingir metas e resultados.</p>
+                    <p>Estudante de Análise e Desenvolvimento de Sistemas, com especialização em infraestrutura de TI, suporte técnico e gerenciamento de bancos de dados. Com experiência sólida em suporte técnico, sou motivado pela busca constante de soluções inovadoras e pela otimização de processos que impulsionem resultados e superem metas Comprometido em transformar desafios técnicos em oportunidades de melhoria contínua.</p>
                 </div>
             </div>
 
